ords/dev_ords.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-ords 
  namespace: dwh-prd-consent
  labels:
    app: dev_ords
    version: "1.5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev_ords
      version: "1.5"
  template:
    metadata:
      name: 
      labels:
        app: dev_ords
        version: "1.5"
    spec:
      securityContext:
        fsGroup: 54321
      volumes:
         - name: dshm
           emptyDir:
             medium: Memory  
         - name: dev-ora-tomcat
           persistentVolumeClaim:
             claimName: dev-ora-tomcat
         - name: dev-ora-ords
           persistentVolumeClaim:
             claimName: dev-ora-ords
             
      containers:
          - name: dev-ords-con
            image: reghbpr01.dc1.true.th/dwh-consent/dev_ords:v1.5
            imagePullPolicy: IfNotPresent
            resources:
                requests:
                  memory: "2Gi"
                  cpu: "2"
                limits:
                  memory: "2Gi"
                  cpu: "2"
            ports:
                - name: ords
                  containerPort: 8080
                - name: https
                  containerPort: 8443
            volumeMounts:
                - name: dshm
                  mountPath: "/dev/shm"
                - name: dev-ora-tomcat
                  mountPath: "/u01/config/instance1"
                - name: dev-ora-ords
                  mountPath: "/u01/ords/conf"
