ords/sdev_ords_int.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev2-ords 
  namespace: dwh-prd-consent
  labels:
    app: dev2_ords
    version: "1.8"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev2_ords
      version: "1.8"
  template:
    metadata:
      name: 
      labels:
        app: dev2_ords
        version: "1.8"
    spec:
      securityContext:
        fsGroup: 54321
      volumes:
         - name: dshm
           emptyDir:
             medium: Memory  
         - name: dev2-ora-tomcat
           persistentVolumeClaim:
             claimName: dev2-ora-tomcat
         - name: dev2-ora-ords
           persistentVolumeClaim:
             claimName: dev2-ora-ords
             
      containers:
          - name: dev2-ords-con
            image: reghbpr01.dc1.true.th/dwh-consent/apex_ords:v1.8
            imagePullPolicy: IfNotPresent
            resources:
                requests:
                  memory: "1Gi"
                  cpu: "2"
                limits:
                  memory: "1Gi"
                  cpu: "2"
            ports:
                - name: ords
                  containerPort: 8080
                - name: https
                  containerPort: 8443
            volumeMounts:
                - name: dshm
                  mountPath: "/dev/shm"
                - name: dev2-ora-tomcat
                  mountPath: "/opt2/tomcat"
                - name: dev2-ora-ords
                  mountPath: "/u02/ords/conf"
