ords/dev_ords_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-ords 
  namespace: dwh-prd-consent
  labels:
    app: prod_ords
    version: "1.5"
spec:
  selector:
    app: prod_ords
    version: "1.5"
  type: NodePort
  ports:
  - name: ords
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32558
  - name: ordshttps
    protocol: TCP
    port: 8443
    targetPort: 8443
    nodePort: 32559
