ords/k8s_ords.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcl-ords 
  namespace: dwh-prd-consent
  labels:
    app: orcl_ords
    version: "1.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orcl_ords
      version: "1.1"
  template:
    metadata:
      labels:
        app: orcl_ords
        version: "1.1"
    spec:
      securityContext:
        fsGroup: 54321
      volumes:
         - name: dshm
           emptyDir:
             medium: Memory  
         - name: ora-tomcat-data
           persistentVolumeClaim:
             claimName: ora-tomcat-data
      containers:
      - name: orcl-ords-con
        image: sarutsr/orcl_ords:v1.1
        resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "8Gi"
              cpu: "4"
        ports:
            - name: ords
              containerPort: 8080
            - name: https
              containerPort: 8443
        volumeMounts:
            - name: dshm
              mountPath: "/dev/shm"
            - name: ora-tomcat-data
              mountPath: "/u01/pvc"
 ---
apiVersion: v1
kind: Service
metadata:
  name: orcl-ords 
  namespace: dwh-prd-consent
  labels:
    app: orcl_ords
    version: "1.1"
spec:
  selector:
    app: orcl_ords
    version: "1.1"
  type: NodePort
  ports:
  - name: ords
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32558
  - name: ordshttps
    protocol: TCP
    port: 8443
    targetPort: 8443
    nodePort: 32559
