ords/k8s_ords_non_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcl-ords 
  namespace: dwh-prd-consent
  labels:
    app: orcl_ords
    version: "1.3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orcl_ords
      version: "1.3"
  template:
    metadata:
      name: 
      labels:
        app: orcl_ords
        version: "1.3"
    spec:
      containers:
          - name: orcl-ords-con
            image: sarutsr/orcl_ords:v1.3
            imagePullPolicy: IfNotPresent
            resources:
                requests:
                  memory: "4Gi"
                  cpu: "2"
                limits:
                  memory: "8Gi"
                  cpu: "4"
            ports:
                - name: ords
                  containerPort: 8080
                - name: https
                  containerPort: 8443

---
apiVersion: v1
kind: Service
metadata:
  name: orcl-ords 
  namespace: dwh-prd-consent
  labels:
    app: orcl_ords
    version: "1.3"
spec:
  selector:
    app: orcl_ords
    version: "1.3"
  type: NodePort
  ports:
  - name: ords
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32558
  - name: ordshttps
    protocol: TCP
    port: 8443
    targetPort: 8443
    nodePort: 32559
