ords/prod_ords.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-ords 
  namespace: dwh-prd-consent
  labels:
    app: prod_ords
    version: "1.4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod_ords
      version: "1.4"
  template:
    metadata:
      name: 
      labels:
        app: prod_ords
        version: "1.4"
    spec:
      securityContext:
        fsGroup: 54321
      volumes:
         - name: dshm
           emptyDir:
             medium: Memory  
         - name: ora-tomcat
           persistentVolumeClaim:
             claimName: ora-tomcat
      containers:
          - name: prod-ords-con
            image: reghbpr01.dc1.true.th/dwh-consent/prod_ords:v1.4
            imagePullPolicy: IfNotPresent
            resources:
                requests:
                  memory: "1Gi"
                  cpu: "2"
                limits:
                  memory: "1Gi"
                  cpu: "2"
            ports:
                - name: ords
                  containerPort: 8080
                - name: https
                  containerPort: 8443
            volumeMounts:
                - name: dshm
                  mountPath: "/dev/shm"
                - name: ora-tomcat
                  mountPath: "/u01/config/instance1"
                  

---
apiVersion: v1
kind: Service
metadata:
  name: prod-ords 
  namespace: dwh-prd-consent
  labels:
    app: prod_ords
    version: "1.4"
spec:
  selector:
    app: prod_ords
    version: "1.4"
  type: NodePort
  ports:
  - name: ords
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32558
  - name: ordshttps
    protocol: TCP
    port: 8443
    targetPort: 8443
    nodePort: 32559
