ords/sdev_ords_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev2-ords 
  namespace: dwh-prd-consent
  labels:
    app: dev2_ords
    version: "1.7"
spec:
  selector:
    app: dev2_ords
    version: "1.7"
  type: NodePort
  ports:
  - name: ords
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32556
  - name: ordshttps
    protocol: TCP
    port: 8443
    targetPort: 8443
    nodePort: 32557
