ords/t_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ords-apex
spec:
  ports:
  - name: ords
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: database_ords
