ords/dev_ords_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dwh-prd-consent
  name: dev-ords
  labels:
    app: dev_ords
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: dev-ords.dwh-prd-consent.arctic.true.th
      http:
        paths:
          - path: /
            backend:
              serviceName: dev-ords
              servicePort: 8080
