ords/prod_ords_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dwh-prd-consent
  name: prod-ords
  labels:
    app: prod_ords
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: prod-ords.dwh-prd-consent.arctic.true.th
      http:
        paths:
          - path: /
            backend:
              serviceName: prod-ords
              servicePort: 80
